corpus/cli/testdata/run/projects/syntax-error/target/bin/bal.fingerprint
a79d9c7984d0462de5413ce41075518c6ac1c16f8bd917504bdd943142d44895